fixes safari overflow bug on about bios images

--- a/src/styles/partials/components/about/_bios.scss
+++ b/src/styles/partials/components/about/_bios.scss
@@ -12,6 +12,7 @@
 
   &-image-grid {
     margin-bottom: $space-700;
+    overflow-y: hidden;
 
     @include mq($L) {
       margin-bottom: $space-600;
